Selects align fix in permits form

--- a/app/assets/stylesheets/application/partials/_forms.scss
+++ b/app/assets/stylesheets/application/partials/_forms.scss
@@ -457,6 +457,6 @@ input[type="checkbox"],
 
 .field-wrapper--inline--very-small{
   float: left;
-  width: 5%;
-  margin: 0 5px 15px;
+  width: 20%;
+  margin: 0 5px 0 0;
 }
